web/WEB-INF/css/Main.css
.contentWrapper{
    border: double bisque;
    width: fit-content;
    overflow: auto;
    float: left;
}

.account{
    border: double bisque;
    width: fit-content;
    overflow: auto;
    margin: 1vw;
}

#rankImageCanvas{
    margin-bottom: 1vw;
}

#rankInfoHolder{
    margin-bottom: 1vw;
}

#accountButtonHolder{
    margin-left: 3vw;
    margin-bottom: 3vw;
    margin-right: 3vw;
}

#rankLoginProgressContainer{
    float: right;
    display: grid;
}

#statisticHolder{
    display: table;
    overflow: auto;
}

.accountButton{
    color: aliceblue;
    border: 0.3vw aliceblue;
    width: 10vw;
    font-size: 1.35vw;
    background-color: forestgreen;
}

.progress-bar{
    position: relative;
    width:400px;
    height: 3em;
    background-color: #111;
    border-radius: 1.5em;
    color:aliceblue;
}

.progress-bar::before{
    content: attr(data-label);
    display: flex;
    align-items: center;
    position: absolute;
    left: 0.5em;
    top: 0.5em;
    bottom: 0.5em;
    width: calc(var(--width, 0) * 1%);
    min-width: 2rem;
    max-width: calc(100% - 1em);
    background-color: forestgreen;
    border-radius: 1em;
    padding: 1em;
}

#shipPlacementButtonHolder{
    float: left;
    display: grid;
    margin-left: 1.5vw;
    margin-right: 1.5vw;
    margin-top: 2vw;
}

.shipPlacementButton{
    border: none;
    width: 3vw;
    height: 3vw;
    background-repeat: no-repeat;
    background-size: 3vw 3vw;
    background-color: transparent;
}

#cancelButton{
    background-image:
            url("https://cdn1.savepice.ru/uploads/2021/1/19/114facfc39668a015c1c1c76a22cf115-full.png");
}

#resetButton{
    background-image:
            url("https://cdn1.savepice.ru/uploads/2021/1/19/102e2b5a5d2d46ee3f9c0f861f11bcbc-full.png");
}

#turnAroundButton{
    background-image:
            url("https://cdn1.savepice.ru/uploads/2021/1/19/8ec1ebaef06ec609827add53ffc99343-full.png");
}

#confirmButton{
    background-image:
            url("https://cdn1.savepice.ru/uploads/2021/1/19/a8c2c89db072bbbe46ae75a048086678-full.png");
}

#generateButton{
    background-image:
            url("https://cdn1.savepice.ru/uploads/2021/1/19/645dff708a43a3ad7d82c333b3b660c1-full.png");
}

#battleButton{
    font-size: 4vw;
    border: 0.1vw black solid;
    background: transparent;
    color: aliceblue;
}

#battleButtonHolder{
    margin-top: 1vw;
}

